<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_style"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/settingsText"
        android:layout_width="178dp"
        android:layout_height="0dp"
        android:layout_marginTop="44dp"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.github.siyamed.shapeimageview.CircularImageView
        android:id="@+id/addProfileImage"
        android:layout_width="130dp"
        android:layout_height="124dp"
        android:layout_marginTop="20dp"
        android:onClick="addProfileImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsText"
        app:siBorderWidth="2dp"
        app:siBorderColor="@color/white"
        android:background="@drawable/circle"
        app:srcCompat="@mipmap/add_habit_icon_foreground"
        app:strokeColor="@color/background_color"
        app:strokeWidth="2dp" />


    <Button
        android:id="@+id/doneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:onClick="doneButton"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="346dp"
        android:layout_height="218dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@+id/doneButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addProfileImage">

        <EditText
            android:id="@+id/userNameEditText"
            android:layout_width="199dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/settingsNameText"
            app:layout_constraintTop_toBottomOf="@+id/settingsUserEmailText" />

        <EditText
            android:id="@+id/userSurnameEditText"
            android:layout_width="199dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.466"
            app:layout_constraintStart_toEndOf="@+id/settingsSurnameText"
            app:layout_constraintTop_toBottomOf="@+id/userNameEditText" />

        <TextView
            android:id="@+id/settingsNameText"
            android:layout_width="89dp"
            android:layout_height="45dp"
            android:layout_marginStart="30dp"
            android:gravity="center"
            android:text="@string/name"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/userNameEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/userNameEditText" />

        <TextView
            android:id="@+id/settingsSurnameText"
            android:layout_width="89dp"
            android:layout_height="45dp"
            android:layout_marginStart="28dp"
            android:gravity="center"
            android:text="@string/Surname"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/userSurnameEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/userSurnameEditText"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/settingsEmailText"
            android:layout_width="89dp"
            android:layout_height="32dp"
            android:layout_marginStart="30dp"
            android:gravity="center"
            android:text="@string/email"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/settingsUserEmailText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/settingsUserEmailText" />

        <TextView
            android:id="@+id/settingsUserEmailText"
            android:layout_width="199dp"
            android:layout_height="32dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/email"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.428"
            app:layout_constraintStart_toEndOf="@+id/settingsEmailText"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>